--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,8 +64,8 @@
   </header>
 
 
-  <section class="clear-fix" id="content">
+  <main class="clear-fix" id="content">
     <%= yield %>
-  </section>
+  </main>
 </body>
 </html>
