--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @listing.name %></h1>
 
-<h3><%= @listing.title %></h3>
+<h3><%= @listing.ymm %></h3>
 
 <section class="top-info clear-fix">
   <section class="pics">
