--- a/app/assets/templates/listings/search_form.jst.ejs
+++ b/app/assets/templates/listings/search_form.jst.ejs
@@ -18,7 +18,7 @@
     </td>
   </tr>
   <tr>
-    <td>
+    <td class="contains-tooltip make">
       <select name="make_id" id="search-make_id">
         <option value="">Make</option>
         <% CarListing.subdivisions.models.forEach(function (make) { %>
