--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -24,43 +24,111 @@
       <header>What it is:</header>
 
       <ul>
-        <li>
+        <li class="clear-fix">
           <label><strong>Year:</strong></label>
           <span><%= @listing.year %></span>
         </li>
-        <li>
+        <li class="clear-fix">
           <label><strong>Make:</strong></label>
           <span><%= @listing.make.name %></span>
-        </li>
-        <li>
+        </li class="clear-fix">
+        <li class="clear-fix">
           <label><strong>Model:</strong></label>
           <span><%= @listing.model.name %></span>
         </li>
-        <li>
+        <li class="clear-fix">
           <label><strong>Miles:</strong></label>
           <span><%= @listing.miles || 'N/A' %></span>
         </li>
-        <li>
+        <li class="clear-fix">
           <label><strong>Transmission:</strong></label>
           <span><%= @listing.transmission || 'N/A' %></span>
         </li>
-        <li>
+        <li class="clear-fix">
           <label><strong>VIN:</strong></label>
           <span><%= @listing.vin || 'N/A' %></span>
         </li>
-        <li>
+        <li class="clear-fix">
           <label><strong>Seller:</strong></label>
           <span><%= @listing.is_owner ? "BY OWNER" : "DEALER" %></span>
         </li>
-        <li>
-          <label><strong>Contact:</strong></label>
-          <span><%= number_to_phone(@listing.phone) %></span>
-        </li>
-        <li>
+        <li class="clear-fix">
           <label><strong>Asking:</strong></label>
           <span><%= number_to_currency(@listing.price, precision: 0) %></span>
         </li>
+        <li class="clear-fix">
+          <label><strong>Contact:</strong></label>
+          <span>
+            <a class="phone" href="#">
+              Phone
+            </a>
+          </span>
+          <script type="text/javascript">
+            var RecaptchaOptions = {
+               theme: 'custom',
+               custom_theme_widget: 'recaptcha_widget'
+            };
+          </script>
+          <form action="<%= listing_phone_url(@listing) %>" method="get"
+                 class="phone clear-fix">
+            <input type="hidden" name="authenticity_token"
+                                value="<%= form_authenticity_token %>">
+            <div id="recaptcha_widget" class="clear-fix">
+               <div class="recaptcha-widget-main">
+                 <div id="recaptcha_image"></div>
 
+                 <div class="recaptcha_only_if_incorrect_sol">
+                   Incorrect please try again
+                 </div>
+
+                 <label class="recaptcha_only_if_image"
+                          for="recaptcha_response_field">
+                   Enter the words above:
+                 </label>
+                 <label class="recaptcha_only_if_audio"
+                          for="recaptcha_response_field">
+                   Enter the numbers you hear:
+                 </label>
+
+                 <input type="text" id="recaptcha_response_field"
+                        name="recaptcha_response_field">
+                 <input type="submit">
+               </div>
+
+               <nav class="clear-fix">
+                 <a href="javascript:Recaptcha.reload()"
+                    title="Get another CAPTCHA">
+                   <i class="fa fa-refresh"></i>
+                 </a>
+                 <a href="javascript:Recaptcha.switch_type('audio')"
+                    title="Get an audio CAPTCHA"
+                    class="recaptcha_only_if_image">
+                   <i class="fa fa-file-audio-o"></i>
+                 </a>
+                 <a href="javascript:Recaptcha.switch_type('image')"
+                    title="Get an image CAPTCHA"
+                    class="recaptcha_only_if_audio">
+                   <i class="fa fa-file-image-o"></i>
+                 </a>
+                 <a href="javascript:Recaptcha.showhelp()" title="Help">
+                   <i class="fa fa-question"></i>
+                 </a>
+               </nav>
+
+             </div>
+
+             <script type="text/javascript"             src="http://www.google.com/recaptcha/api/challenge?k=6LeCffQSAAAAACUboC37v0EuQej0R-53GKMKOIVh">
+             </script>
+             <noscript>
+               <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LeCffQSAAAAACUboC37v0EuQej0R-53GKMKOIVh"
+                    height="300" width="500" frameborder="0"></iframe><br>
+               <textarea name="recaptcha_challenge_field" rows="3" cols="40">
+               </textarea>
+               <input type="hidden" name="recaptcha_response_field"
+                    value="manual_challenge">
+             </noscript>
+          </form>
+        </li>
       </ul>
     </article>
   </section>
@@ -74,7 +142,67 @@
 
 
 <script>
+
+var showRecaptcha = function (el) {
+  Recaptcha.create('<%= ENV['RECAPTCHA_PUBLIC_KEY'] %>', el, {
+    callback: Recaptcha.focus_response_field
+  });
+
+  CarListing.showPhoneForm = function () {
+    $('a.phone').remove();
+    showRecaptcha('recaptcha_widget');
+    $('form.phone').addClass('show');
+  }
+};
+
 $(document).ready(function() {
+  $('a.phone').on('click', function (event) {
+    event.preventDefault();
+
+    var $currentTarget = $(event.currentTarget);
+    $currentTarget.remove();
+    $('form.phone').addClass('show');
+    showRecaptcha('recaptcha_widget');
+  });
+
+  $('form.phone').on('submit', function (event) {
+    event.preventDefault();
+
+    var $form = $(event.currentTarget);
+    var url = $form.attr('action');
+    $.ajax({
+      method: 'get',
+      url: url,
+      accepts: 'json',
+      data: $form.serializeJSON(),
+      success: function (data) {
+        if (data.phone) {
+          Recaptcha.destroy();
+          $form.before('<span>' + data.phone + '</span>');
+          $form.remove();
+        }
+        else {
+          $textInput = $form.find('input[type="text"]');
+          $textInput.prop('disabled', true)
+          $('#recaptcha_widget').removeClass('recaptcha_nothad_incorrect_sol');
+          $form.find('.recaptcha_only_if_incorrect_sol')
+            .stop()
+            .fadeTo(300, 0.1).fadeTo(300, 1)
+            .fadeTo(300, 0.1).fadeTo(300, 1)
+            .delay(1000)
+            .fadeOut(400)
+            .promise().done(function () {
+              Recaptcha.reload()
+              $textInput.prop('disabled', false);
+            });
+        }
+      },
+      error: function (data) {
+        console.log('hit error', data)
+      }
+    });
+  });
+
   var $lightbox = $("div.lightbox");
   var totalPics = <%= @listing.pics.count %>;
   var currentPic = 1;
