--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -8,7 +8,7 @@
 
   <div class="listing-info">
     <div class="car-and-seller-container clear-fix">
-      <%= link_to listing.name, listing %>
+      <%= link_to listing.ymm, listing %>
       <div class="seller">
         by <strong><%= listing.is_owner ? "OWNER" : "DEALER" %></strong>
       </div>
