--- a/app/views/users/_dashboard.html.erb
+++ b/app/views/users/_dashboard.html.erb
@@ -2,7 +2,9 @@
 
 <%= link_to "Sell a car!", new_listing_url %>
 
-<% unless @user.listings.empty? %>
+<% if @user.listings.empty? %>
+  <h2>You don't have any cars for sale</h2>
+<% else %>
   <h2>Your <%= "listing".pluralize(@user.listings.count) %></h2>
   <%= render @user.listings %>
 <% end %>
